--- a/stylus/src/styles/style.styl
+++ b/stylus/src/styles/style.styl
@@ -3,7 +3,7 @@
 @import "nib"
 @import "../../imports/pc/setting"
 
-@import "../../imports/mixin"
+@import "../../imports/mixins"
 @import "../../imports/normalize"
 @import "../../imports/pc/default"
 @import "../../imports/sprite"
