--- a/pug/src/index.pug
+++ b/pug/src/index.pug
@@ -36,4 +36,11 @@ block contents
   button button
   p.txt test
 
-  div(style="width: 100px; height: 1000px; background-color: #ddd;")
+  .size
+
+  .aspect
+
+  .arrow
+
+  .box-wrap
+    .box
