--- a/htdocs/styles/style.css
+++ b/htdocs/styles/style.css
@@ -198,8 +198,7 @@ dt,
 dd,
 th,
 td {
-  font-size: 12px;
-  font-size: 1.2rem;
+  font-size-rem: 12;
 }
 p {
   margin-top: 0;
@@ -219,168 +218,112 @@ dl {
 dd {
   margin-left: 0;
 }
-@-moz-keyframes fadeFirstSet {
+@-moz-keyframes delayView {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
-  99% {
+  99.999% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
-@-webkit-keyframes fadeFirstSet {
+@-webkit-keyframes delayView {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
-  99% {
+  99.999% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
-@-o-keyframes fadeFirstSet {
+@-o-keyframes delayView {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
-  99% {
+  99.999% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
-@keyframes fadeFirstSet {
+@keyframes delayView {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
-  99% {
+  99.999% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
 @-moz-keyframes fadeIn {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
 @-o-keyframes fadeIn {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
 @keyframes fadeIn {
   0% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
   100% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
 }
 @-moz-keyframes fadeOut {
   0% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
   100% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
 }
 @-webkit-keyframes fadeOut {
   0% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
   100% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
 }
 @-o-keyframes fadeOut {
   0% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
   100% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
 }
 @keyframes fadeOut {
   0% {
     opacity: 1;
-    -ms-filter: none;
-    filter: none;
   }
   100% {
     opacity: 0;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
   }
 }
 .sprite li:nth-child(1) {
@@ -403,31 +346,29 @@ dd {
 }
 .btn {
   position: relative;
-  -webkit-animation: fadeFirstSet 0.2s linear;
-  -moz-animation: fadeFirstSet 0.2s linear;
-  -o-animation: fadeFirstSet 0.2s linear;
-  -ms-animation: fadeFirstSet 0.2s linear;
-  animation: fadeFirstSet 0.2s linear;
+  -webkit-animation: delayView 0.2s linear;
+  -moz-animation: delayView 0.2s linear;
+  -o-animation: delayView 0.2s linear;
+  -ms-animation: delayView 0.2s linear;
+  animation: delayView 0.2s linear;
 }
 .btn,
-.btn:hover:before {
+.btn:hover::before {
   width: 200px;
   height: 40px;
   background: url("../images/btn.png?03d93530f0") no-repeat;
   background-position: 0px 0px;
 }
-.btn:before,
-.btn:after {
+.btn::before,
+.btn::after {
   content: '';
   display: block;
   opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
   position: absolute;
   top: 0;
   left: 0;
 }
-.btn:after {
+.btn::after {
   width: 200px;
   height: 40px;
   background: url("../images/btn.png?03d93530f0") no-repeat;
@@ -441,18 +382,74 @@ dd {
 .btn:hover {
   background: none;
 }
-.btn:hover:before,
-.btn:hover:after {
+.btn:hover::before,
+.btn:hover::after {
   opacity: 1;
-  -ms-filter: none;
-  filter: none;
 }
-.btn:hover:after {
+.btn:hover::after {
   -webkit-animation: fadeIn 0.2s linear;
   -moz-animation: fadeIn 0.2s linear;
   -o-animation: fadeIn 0.2s linear;
   -ms-animation: fadeIn 0.2s linear;
   animation: fadeIn 0.2s linear;
+}
+.size {
+  background-color: #fcc;
+  width: 15%;
+  position: relative;
+}
+.size::before {
+  content: "";
+  display: block;
+  padding-top: 20%;
+}
+.size > * {
+  position: absolute;
+}
+.aspect {
+  width: 10%;
+  background-color: #ccc;
+  position: relative;
+}
+.aspect::before {
+  content: "";
+  display: block;
+  padding-top: 50%;
+}
+.aspect > * {
+  position: absolute;
+}
+.arrow {
+  position: relative;
+}
+.arrow::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 0;
+  border-width: 15px;
+  border-style: solid;
+  border-color: #999 transparent transparent;
+  position: absolute;
+  top: auto;
+  right: auto;
+  bottom: auto;
+  left: auto;
+}
+.box-wrap {
+  width: 200px;
+  height: 200px;
+  background-color: #ccf;
+  position: relative;
+}
+.box-wrap .box {
+  width: 100px;
+  height: 100px;
+  background-color: #cfc;
+  margin: -50px 0 0 -50px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 /*# sourceMappingURL=style.css.map */
