sprite-hover -> sprite-animate-hover

--- a/stylus/imports/mixins.styl
+++ b/stylus/imports/mixins.styl
@@ -90,7 +90,7 @@ triangle(shape = 'left', size = 10px, color = #000, positions = { top: auto, rig
 // animations
 // ==============================
 
-sprite-hover(image, duration = .2, suffix = { before: '-off', after: '-on' })
+sprite-animate-hover(image, duration = .2, suffix = { before: '-off', after: '-on' })
   position relative
   animation delayView (duration)s linear
   &, &:hover::before
