--- a/stylus/src/styles/style.styl
+++ b/stylus/src/styles/style.styl
@@ -16,7 +16,7 @@
       sprite "images/circle/" + name + ".png"
 
 .btn
-  sprite-hover('images/btn/btn')
+  sprite-animate-hover('images/btn/btn')
 
 .size
   background-color #fcc
@@ -42,5 +42,3 @@
     size 100px
     background-color #cfc
     centering(100)
-
-sprite-hover-anime()
