--- a/htdocs/styles/style.css
+++ b/htdocs/styles/style.css
@@ -344,6 +344,60 @@ dd {
   background: url("../images/circle.png?0354ecf5e6") no-repeat;
   background-position: 0px -64px;
 }
+.btn {
+  position: relative;
+  -webkit-animation: delayView 0.2s linear;
+  -moz-animation: delayView 0.2s linear;
+  -o-animation: delayView 0.2s linear;
+  -ms-animation: delayView 0.2s linear;
+  animation: delayView 0.2s linear;
+}
+.btn::before,
+.btn::after {
+  content: '';
+  display: block;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.btn,
+.btn::before {
+  width: 200px;
+  height: 40px;
+  background: url("../images/btn.png?03d93530f0") no-repeat;
+  background-position: 0px 0px;
+}
+.btn::after {
+  width: 200px;
+  height: 40px;
+  background: url("../images/btn.png?03d93530f0") no-repeat;
+  background-position: 0px -40px;
+  -webkit-animation: fadeOut 0.2s linear;
+  -moz-animation: fadeOut 0.2s linear;
+  -o-animation: fadeOut 0.2s linear;
+  -ms-animation: fadeOut 0.2s linear;
+  animation: fadeOut 0.2s linear;
+}
+.btn:hover {
+  background: none;
+}
+.btn:hover::before {
+  opacity: 0;
+  -webkit-animation: fadeOut 0.2s linear;
+  -moz-animation: fadeOut 0.2s linear;
+  -o-animation: fadeOut 0.2s linear;
+  -ms-animation: fadeOut 0.2s linear;
+  animation: fadeOut 0.2s linear;
+}
+.btn:hover::after {
+  opacity: 1;
+  -webkit-animation: fadeIn 0.2s linear;
+  -moz-animation: fadeIn 0.2s linear;
+  -o-animation: fadeIn 0.2s linear;
+  -ms-animation: fadeIn 0.2s linear;
+  animation: fadeIn 0.2s linear;
+}
 .size {
   background-color: #fcc;
   width: 15%;
