stylus で css ファイルを読み込めるように変更

--- a/stylus/src/styles/style.styl
+++ b/stylus/src/styles/style.styl
@@ -3,7 +3,7 @@
 @import "../../imports/pc/setting"
 
 @import "../../imports/mixins"
-@import "../../imports/normalize"
+@import "../../imports/normalize.css"
 @import "../../imports/pc/default"
 @import "../../imports/sprite"
 @import "../../imports/keyframes"
