sprite-anime-hover -> sprite-fade-hover & add cross fade flag. triangle positions options merge.

--- a/stylus/src/styles/style.styl
+++ b/stylus/src/styles/style.styl
@@ -15,7 +15,7 @@
       sprite "images/circle/" + name + ".png"
 
 .btn
-  sprite-animate-hover('images/btn/btn')
+  sprite-fade-hover('images/btn/btn')
 
 .size
   background-color #fcc
