--- a/htdocs/styles/style.css
+++ b/htdocs/styles/style.css
@@ -588,6 +588,8 @@ dd {
   background-position: 0px -64px;
 }
 .btn {
+  width: 200px;
+  height: 40px;
   position: relative;
   -webkit-animation: delayView 0.2s linear;
   -moz-animation: delayView 0.2s linear;
@@ -599,12 +601,10 @@ dd {
 .btn::after {
   content: '';
   display: block;
-  opacity: 0;
   position: absolute;
   top: 0;
   left: 0;
 }
-.btn,
 .btn::before {
   width: 200px;
   height: 40px;
@@ -612,21 +612,11 @@ dd {
   background-position: 0px 0px;
 }
 .btn::after {
+  opacity: 0;
   width: 200px;
   height: 40px;
   background: url("../images/btn.png?03d93530f0") no-repeat;
   background-position: 0px -40px;
-  -webkit-animation: fadeOut 0.2s linear;
-  -moz-animation: fadeOut 0.2s linear;
-  -o-animation: fadeOut 0.2s linear;
-  -ms-animation: fadeOut 0.2s linear;
-  animation: fadeOut 0.2s linear;
-}
-.btn:hover {
-  background: none;
-}
-.btn:hover::before {
-  opacity: 0;
   -webkit-animation: fadeOut 0.2s linear;
   -moz-animation: fadeOut 0.2s linear;
   -o-animation: fadeOut 0.2s linear;
