correct triangle positons option

--- a/stylus/imports/mixins.styl
+++ b/stylus/imports/mixins.styl
@@ -59,7 +59,7 @@ img-replace(indent-dir = 'left')
 
 triangle(shape = 'left', size = 10px, color = #000, positions = {})
   default-positions-hash = { top: auto, right: auto, bottom: auto, left: auto }
-  positions = merge(default-positions-hash, opts)
+  positions = merge(default-positions-hash, positions)
   content ""
   display block
   width 0
