--- a/stylus/imports/sprite.styl
+++ b/stylus/imports/sprite.styl
@@ -1,6 +1,8 @@
 sprite-hash = {"images/btn/btn-off.png":{"x":0,"y":0,"width":200,"height":40,"url":"/images/btn.png"},"images/btn/btn-on.png":{"x":0,"y":40,"width":200,"height":40,"url":"/images/btn.png"},"images/circle/blue.png":{"x":0,"y":0,"width":32,"height":32,"url":"/images/circle.png"},"images/circle/green.png":{"x":0,"y":32,"width":32,"height":32,"url":"/images/circle.png"},"images/circle/red.png":{"x":0,"y":64,"width":32,"height":32,"url":"/images/circle.png"},"images/square/blue.png":{"x":0,"y":0,"width":32,"height":32,"url":"/images/square.png"},"images/square/green.png":{"x":0,"y":32,"width":32,"height":32,"url":"/images/square.png"},"images/square/red.png":{"x":0,"y":64,"width":32,"height":32,"url":"/images/square.png"},"sp/images/circle/blue.png":{"x":0,"y":0,"width":32,"height":32,"url":"/sp/images/circle.png"},"sp/images/circle/green.png":{"x":0,"y":32,"width":32,"height":32,"url":"/sp/images/circle.png"},"sp/images/circle/red.png":{"x":0,"y":64,"width":32,"height":32,"url":"/sp/images/circle.png"},"sp/images/square/blue.png":{"x":0,"y":0,"width":32,"height":32,"url":"/sp/images/square.png"},"sp/images/square/green.png":{"x":0,"y":32,"width":32,"height":32,"url":"/sp/images/square.png"},"sp/images/square/red.png":{"x":0,"y":64,"width":32,"height":32,"url":"/sp/images/square.png"}}
 sprite(filepath, scale = 1)
   image-hash = sprite-hash[filepath]
+  if !image-hash
+    error('Not found image file ' + filepath + '.')
   width: (image-hash.width * scale)px
   height: (image-hash.height * scale)px
   url = image-hash.url
