--- a/pug/includes/metas.pug
+++ b/pug/includes/metas.pug
@@ -1,9 +1,9 @@
 meta(charset="utf-8")
 title= title
-meta(name="description", content=description)
-meta(name="keywords", content=keywords)
-meta(property="og:title", content=ogpTitle)
-meta(property="og:description", content=ogpDescription)
-meta(property="og:url", content=ogpUrl)
-meta(property="og:image", content=ogpImage)
-meta(property="og:type", content=ogpType)
+meta(name="description" content=description)
+meta(name="keywords" content=keywords)
+meta(property="og:title" content=ogpTitle)
+meta(property="og:description" content=ogpDescription)
+meta(property="og:url" content=ogpUrl)
+meta(property="og:image" content=ogpImage)
+meta(property="og:type" content=ogpType)
