--- a/pug/extends/sp/layout.pug
+++ b/pug/extends/sp/layout.pug
@@ -9,13 +9,13 @@ block html
       block head
         block metas
           include /includes/metas
-          meta(name="viewport", content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1")
-          meta(name="format-detection", content="telephone=no")
-          link(rel="apple-touch-icon", type="image/png", href="cms/img/apple-touch-icon.png")
+          meta(name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1")
+          meta(name="format-detection" content="telephone=no")
+          link(rel="apple-touch-icon" type="image/png" href=relative('sp/apple-touch-icon.png'))
         block styles
-          link(rel="stylesheet", href="/sp/styles/style.css", media="all")
+          link(rel="stylesheet" href=relative('sp/styles/style.css') media="all")
         block scripts
-          script(src="/sp/scripts/index.js")
+          script(src=relative('sp/scripts/bundle.js'))
     body&attributes(bodyAttrs)
       block body
         .wrap
